<resources>
    <string name="app_name">Assignment 01</string>
    <string name="car_guessing">Car Guessing</string>
    <string name="identify_the_car_make">Identify the Car Make</string>
    <string name="hints">Hints</string>
    <string name="identify_the_car_image">Identify the Car Image</string>
    <string name="advanced_level">Advanced Level</string>
    <string name="developed_by_shenal">Developed by Shenal</string>
    <string name="identify">Identify</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="guess_the_car">Guess the Car</string>
    <string name="correct">CORRECT!</string>
    <string name="wrong">WRONG!</string>
    <string name="guess_a_letter">Guess a Letter</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="timer">Timer</string>
    <string name="enter_letter">"Please enter a Letter"</string>
    <string name="car_make">Identify Car Make</string>
    <string name="hint">Identify With Hints</string>
    <string name="car_image">Choose the Correct Answer</string>
    <string name="advanced">Identify the cars</string>

    <string-array name="cars_list">
        <item>Audi</item>
        <item>BMW</item>
        <item>Chevrolet</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Jaguar</item>
        <item>Lamborghini</item>
        <item>McLaren</item>
        <item>Mercedes</item>
        <item>Mini Cooper</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Peugeot</item>
        <item>Porche</item>
        <item>Suzuki</item>
        <item>Toyota</item>
    </string-array>

</resources>
