<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portrait_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/car_guessing"
        android:textSize="36sp"
        android:textColor="#fc1745"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIdentifyCarMake"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/dark_mix_red"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/identify_the_car_make"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <Button
        android:id="@+id/btnHints"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/dark_mix_red"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/hints"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnIdentifyCarMake"
        app:layout_constraintStart_toStartOf="@+id/btnIdentifyCarMake"
        app:layout_constraintTop_toBottomOf="@+id/btnIdentifyCarMake" />

    <Button
        android:id="@+id/btnIdentifyCarImage"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/dark_mix_red"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/identify_the_car_image"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnHints"
        app:layout_constraintStart_toStartOf="@+id/btnHints"
        app:layout_constraintTop_toBottomOf="@+id/btnHints" />

    <Button
        android:id="@+id/btnAdvanced"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/dark_mix_red"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/advanced_level"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnIdentifyCarImage"
        app:layout_constraintStart_toStartOf="@+id/btnIdentifyCarImage"
        app:layout_constraintTop_toBottomOf="@+id/btnIdentifyCarImage" />

    <TextView
        android:id="@+id/txtLicence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/developed_by_shenal"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:checked="false"
        android:fontFamily="@font/poppins_semibold"
        android:switchPadding="10dp"
        android:textColor="@color/white"
        android:text="@string/timer"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>